[gd_scene load_steps=11 format=3 uid="uid://chat_ui"]

[ext_resource type="Script" path="res://nodes/ui/chat/chat_ui.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://cy15kjeobttji" path="res://nodes/ui/fonts/alagard.ttf" id="2_font"]
[ext_resource type="PackedScene" uid="uid://key_indicator" path="res://nodes/input/keys/key_indicator.tscn" id="3_key_indicator"]
[ext_resource type="Texture2D" path="res://nodes/input/keys/esc.png" id="4_esc_key"]

[sub_resource type="LabelSettings" id="LabelSettings_npc_name"]
font = ExtResource("2_font")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_dialogue"]
font = ExtResource("2_font")
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_main_panel"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0.7, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_portrait_panel"]
bg_color = Color(0.15, 0.15, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.5, 0.4, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dialogue_panel"]
bg_color = Color(0.15, 0.15, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.5, 0.4, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.3, 0.25, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.7, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.4, 0.35, 0.25, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.9, 0.7, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ChatUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_main_panel")

[node name="XCloseButton" type="Button" parent="CenterContainer/Panel"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
text = "X"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NPCPortraitPanel" type="Panel" parent="CenterContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme_override_styles/panel = SubResource("StyleBoxFlat_portrait_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/HBoxContainer/NPCPortraitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="NPCNameLabel" type="Label" parent="CenterContainer/Panel/HBoxContainer/NPCPortraitPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 4
text = "NPC Name"
label_settings = SubResource("LabelSettings_npc_name")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NPCPortraitContainer" type="CenterContainer" parent="CenterContainer/Panel/HBoxContainer/NPCPortraitPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NPCStatsContainer" type="VBoxContainer" parent="CenterContainer/Panel/HBoxContainer/NPCPortraitPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StatsLabel" type="Label" parent="CenterContainer/Panel/HBoxContainer/NPCPortraitPanel/VBoxContainer/NPCStatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "Stats:"
horizontal_alignment = 1

[node name="HPLabel" type="Label" parent="CenterContainer/Panel/HBoxContainer/NPCPortraitPanel/VBoxContainer/NPCStatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "HP: 100/100"
horizontal_alignment = 1

[node name="ManaLabel" type="Label" parent="CenterContainer/Panel/HBoxContainer/NPCPortraitPanel/VBoxContainer/NPCStatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "Mana: 100/100"
horizontal_alignment = 1

[node name="EnergyLabel" type="Label" parent="CenterContainer/Panel/HBoxContainer/NPCPortraitPanel/VBoxContainer/NPCStatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "Energy: 100/100"
horizontal_alignment = 1

[node name="HungerLabel" type="Label" parent="CenterContainer/Panel/HBoxContainer/NPCPortraitPanel/VBoxContainer/NPCStatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "Hunger: 100/100"
horizontal_alignment = 1

[node name="EmotionLabel" type="Label" parent="CenterContainer/Panel/HBoxContainer/NPCPortraitPanel/VBoxContainer/NPCStatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "Emotion: Neutral"
horizontal_alignment = 1

[node name="DialoguePanel" type="Panel" parent="CenterContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
theme_override_styles/panel = SubResource("StyleBoxFlat_dialogue_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/HBoxContainer/DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel/HBoxContainer/DialoguePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="DialogueText" type="RichTextLabel" parent="CenterContainer/Panel/HBoxContainer/DialoguePanel/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_font")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Dialogue text will appear here..."
fit_content = true
scroll_active = false

[node name="BottomContainer" type="HBoxContainer" parent="CenterContainer/Panel/HBoxContainer/DialoguePanel/VBoxContainer"]
layout_mode = 2

[node name="KeyHintContainer" type="MarginContainer" parent="CenterContainer/Panel/HBoxContainer/DialoguePanel/VBoxContainer/BottomContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_bottom = 8

[node name="EscKeyIndicator" parent="CenterContainer/Panel/HBoxContainer/DialoguePanel/VBoxContainer/BottomContainer/KeyHintContainer" instance=ExtResource("3_key_indicator")]
layout_mode = 2
key_texture = ExtResource("4_esc_key")
label_text = "Close"
icon_size = Vector2(24, 24)

[node name="Spacer" type="Control" parent="CenterContainer/Panel/HBoxContainer/DialoguePanel/VBoxContainer/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/Panel/HBoxContainer/DialoguePanel/VBoxContainer/BottomContainer"]
layout_mode = 2
alignment = 2
theme_override_constants/separation = 8

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/HBoxContainer/DialoguePanel/VBoxContainer/BottomContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.8, 1)
text = "Close"
